# json-parser-cpp

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
src/: JSONParser.cpp  JSONParser.h
test/: JSONParserTest.cpp
test/res/: test.json  test2.json
